feat(emacs): enable vertico

--- a/applications/emacs/init.org
+++ b/applications/emacs/init.org
@@ -45,6 +45,14 @@ macOSでは環境変数($PATH など)を読み込めないため[[https://github
   (breadcrumb-mode))
 #+end_src
 
+* minibuffer
+Referring to https://protesilaos.com/codelog/2024-11-28-basic-emacs-configuration/
+#+begin_src emacs-lisp
+(use-package vertico
+  :ensure t
+  :hook (after-init . vertico-mode))
+#+end_src
+
 * version control system
 ** git
 #+begin_src emacs-lisp
