feat(emacs): enable moody

--- a/applications/emacs/init.org
+++ b/applications/emacs/init.org
@@ -15,6 +15,17 @@
   (load-theme 'doom-nord :no-confirm))
 #+end_src
 
+* UI
+** mode-line
+#+begin_src emacs-lisp
+(use-package moody
+  :ensure t
+  :config
+  (moody-replace-mode-line-front-space)
+  (moody-replace-mode-line-buffer-identification)
+  (moody-replace-vc-mode))
+#+end_src
+
 * version control system
 ** git
 #+begin_src emacs-lisp
