feat(emacs): init.org init

--- a/applications/emacs/init.org
+++ b/applications/emacs/init.org
@@ -1,3 +1,9 @@
+#+TITLE:My Emacs Configuration
+#+STARTUP:overview
+
+* basic
+
+#+begin_src emacs-lisp
 (set-face-attribute 'default nil
                     :family "Liga HackGen Console NF"
                     :height 140)
@@ -50,3 +56,4 @@
 (use-package nix-mode
   :ensure t
   :mode "\\.nix\\'")
+#+end_src
