feat(emacs): enable breadcrumb

--- a/applications/emacs/init.org
+++ b/applications/emacs/init.org
@@ -26,6 +26,14 @@
   (moody-replace-vc-mode))
 #+end_src
 
+** headerline
+#+begin_src emacs-lisp
+(use-package breadcrumb
+  :ensure t
+  :config
+  (breadcrumb-mode))
+#+end_src
+
 * version control system
 ** git
 #+begin_src emacs-lisp
