feat(emacs): enable marginarlia

--- a/applications/emacs/init.org
+++ b/applications/emacs/init.org
@@ -53,6 +53,12 @@ Referring to https://protesilaos.com/codelog/2024-11-28-basic-emacs-configuratio
   :hook (after-init . vertico-mode))
 #+end_src
 
+#+begin_src emacs-lisp
+(use-package marginalia
+  :ensure t
+  :hook (after-init . marginalia-mode))
+#+end_src
+
 * version control system
 ** git
 #+begin_src emacs-lisp
