feat(emacs): enable orderless

--- a/applications/emacs/init.org
+++ b/applications/emacs/init.org
@@ -59,6 +59,15 @@ Referring to https://protesilaos.com/codelog/2024-11-28-basic-emacs-configuratio
   :hook (after-init . marginalia-mode))
 #+end_src
 
+#+begin_src emacs-lisp
+(use-package orderless
+  :ensure t
+  :config
+  (setq completion-styles '(orderless basic))
+  (setq completion-category-defaults nil)
+  (setq completion-category-overrides nil))
+#+end_src
+
 * version control system
 ** git
 #+begin_src emacs-lisp
