feat(emacs): enable savehist

--- a/applications/emacs/init.org
+++ b/applications/emacs/init.org
@@ -68,6 +68,15 @@ Referring to https://protesilaos.com/codelog/2024-11-28-basic-emacs-configuratio
   (setq completion-category-overrides nil))
 #+end_src
 
+#+begin_quote
+The built-in savehist package keeps a record of user inputs and stores them across sessions. Thus, the user will always see their latest choices closer to the top (such as with M-x).
+#+end_quote
+#+begin_src emacs-lisp
+(use-package savehist
+  :ensure nil ; it is built-in
+  :hook (after-init . savehist-mode))
+#+end_src
+
 * version control system
 ** git
 #+begin_src emacs-lisp
