--- a/applications/emacs/init.org
+++ b/applications/emacs/init.org
@@ -77,6 +77,25 @@ The built-in savehist package keeps a record of user inputs and stores them acro
   :hook (after-init . savehist-mode))
 #+end_src
 
+#+begin_src emacs-lisp
+(use-package corfu
+  :ensure t
+  :hook (after-init . global-corfu-mode)
+  :bind (:map corfu-map ("<tab>" . corfu-complete))
+  :config
+  (setq tab-always-indent 'complete)
+  (setq corfu-preview-current nil)
+  (setq corfu-min-width 20)
+
+  (setq corfu-popupinfo-delay '(1.25 . 0.5))
+  (corfu-popupinfo-mode 1) ; shows documentation after `corfu-popupinfo-delay'
+
+  ;; Sort by input history (no need to modify `corfu-sort-function').
+  (with-eval-after-load 'savehist
+    (corfu-history-mode 1)
+    (add-to-list 'savehist-additional-variables 'corfu-history)))
+#+end_src
+
 * version control system
 ** git
 #+begin_src emacs-lisp
