feat(emacs): disable backup files

--- a/applications/emacs/early-init.org
+++ b/applications/emacs/early-init.org
@@ -11,3 +11,9 @@
 #+begin_src emacs-lisp
 (setq ring-bell-function 'ignore)
 #+end_src
+
+** disable backup files
+#+begin_src emacs-lisp
+(setq make-backup-files nil)
+(setq auto-save-default nil)
+#+end_src
