refactor(emacs): move some settings to early-init.org

--- a/applications/emacs/early-init.org
+++ b/applications/emacs/early-init.org
@@ -1,6 +1,12 @@
 #+TITLE:early-init.org
 #+STARTUP:overview
 
+** disable some bars
+#+begin_src emacs-lisp
+(push '(tool-bar-lines . 0) default-frame-alist)
+(push '(vertical-scroll-bars) default-frame-alist)
+#+end_src
+
 ** turn off the annoying bell
 #+begin_src emacs-lisp
 (setq ring-bell-function 'ignore)
