feat(emacs): add org-agenda settings

--- a/applications/emacs/init.org
+++ b/applications/emacs/init.org
@@ -132,6 +132,13 @@ The built-in savehist package keeps a record of user inputs and stores them acro
          "* %?\n  %U\n  %i\n  %a")))
 #+end_src
 
+** org-agenda
+#+begin_src emacs-lisp
+(global-set-key (kbd "C-c a") 'org-agenda)
+
+(setq org-agenda-files '("~/dropbox/org"))
+#+end_src
+
 * misc
 #+begin_src emacs-lisp
 (which-key-mode)
