feat(emacs): add vundo

--- a/applications/emacs/init.org
+++ b/applications/emacs/init.org
@@ -140,6 +140,16 @@ The built-in savehist package keeps a record of user inputs and stores them acro
 #+end_src
 
 * misc
+** vundo
+#+begin_src emacs-lisp
+(use-package vundo
+  :ensure t
+  :bind (("C-x u" . vundo))
+  :config
+  (setq vundo-glyph-alist vundo-unicode-symbols))
+#+end_src
+
+** Others
 #+begin_src emacs-lisp
 (which-key-mode)
 
