feat(emacs): enable visual-line-mode globally
Use visual-line-mode to preserve logical line structure
while providing visual line wrapping for readability

--- a/applications/emacs/init.org
+++ b/applications/emacs/init.org
@@ -15,6 +15,15 @@
   (load-theme 'doom-nord :no-confirm))
 #+end_src
 
+Enable visual-line-mode globally instead of using auto-fill-mode here
+to preserve logical line structure
+while still wrapping long lines visually for better readability
+without modifying the actual file.
+
+#+begin_src emacs-lisp
+(visual-line-mode 1)
+#+end_src
+
 ** Darwin
 macOSでは環境変数($PATH など)を読み込めないため[[https://github.com/purcell/exec-path-from-shell][exec-path-from-shell]]を使ったワークアランウドが必要。
 [[https://github.com/d12frosted/homebrew-emacs-plus/blob/3e61ee44f4cfc43dce292047aff5e9277e7d1bd4/Library/EmacsBase.rb#L33-L49][emacs-plus]]ではEmacsのInfo.plistにPATHを挿入しており、そのパッチを当てればこのパッケージは不要となるかもしれない。
