--- a/applications/emacs/init.org
+++ b/applications/emacs/init.org
@@ -159,6 +159,26 @@ The built-in savehist package keeps a record of user inputs and stores them acro
 #+end_src
 
 * org
+
+** Semantic Line Breaks
+
+[[https://sembr.org/][Semantic Line Breaks (SemBr)]] is a writing convention
+where line breaks are placed at logical boundaries in sentences,
+such as after punctuation marks or between phrases.
+This makes diffs more meaningful in version control
+and improves readability without affecting the rendered output.
+
+The recommended line length is around 80 characters.
+I set this as an upper limit in the editor
+to prevent lines from becoming unnecessarily long.
+
+#+begin_src emacs-lisp
+(add-hook 'text-mode-hook
+          (lambda ()
+            (auto-fill-mode 1)
+            (setq fill-column 80)))
+#+end_src
+
 ** org-capture
 #+begin_src emacs-lisp
 (global-set-key (kbd "C-c c") 'org-capture)
