--- a/applications/emacs/init.org
+++ b/applications/emacs/init.org
@@ -24,6 +24,12 @@ without modifying the actual file.
 (visual-line-mode 1)
 #+end_src
 
+Highlight the cursor line.
+
+#+begin_src emacs-lisp
+(global-hl-line-mode 1)
+#+end_src
+
 ** Darwin
 macOSでは環境変数($PATH など)を読み込めないため[[https://github.com/purcell/exec-path-from-shell][exec-path-from-shell]]を使ったワークアランウドが必要。
 [[https://github.com/d12frosted/homebrew-emacs-plus/blob/3e61ee44f4cfc43dce292047aff5e9277e7d1bd4/Library/EmacsBase.rb#L33-L49][emacs-plus]]ではEmacsのInfo.plistにPATHを挿入しており、そのパッチを当てればこのパッケージは不要となるかもしれない。
