feat(emacs): add htmlize package for Org HTML export
Added htmlize package to enable proper syntax highlighting when exporting
Org files to HTML format. This ensures code blocks are properly colored
in HTML exports.

--- a/applications/emacs/init.org
+++ b/applications/emacs/init.org
@@ -240,6 +240,17 @@ to prevent lines from becoming unnecessarily long.
 
 #+end_src
 
+** htmlize
+
+Used when converting Org files to HTML with syntax highlighting for code blocks.
+
+=C-c C-e h h= exports the current Org buffer to HTML.
+
+#+begin_src emacs-lisp
+(use-package htmlize
+  :ensure t)
+#+end_src
+
 * misc
 ** vundo
 #+begin_src emacs-lisp
