feat(docs): add ReadTheOrg HTML theme for better documentation presentation
Added the ReadTheOrg theme setup to enhance the HTML export appearance of the README documentation. This provides a cleaner, more professional look for the generated HTML documentation.

--- a/README.org
+++ b/README.org
@@ -1,5 +1,6 @@
 #+TITLE: My literate configurations with Org and Nix
 #+STARTUP: overview
+#+SETUPFILE: https://fniessen.github.io/org-html-themes/org/theme-readtheorg.setup
 
 * About
 
