--- a/README.org
+++ b/README.org
@@ -4,6 +4,41 @@
 
 * About
 
+This repository contains my personal system configurations managed through a literate programming approach using Nix and Org-mode.
+
+** Overview
+
+All configurations are written in Org-mode documents that serve both as documentation and source code. This approach ensures that my system setup is:
+- **Reproducible**: Every configuration can be rebuilt exactly on any machine
+- **Self-documenting**: The configuration files explain their own purpose and implementation
+- **Version controlled**: All changes are tracked with meaningful context
+
+The complete documentation is available at [[https://dotfiles.natsukium.com]], with Japanese translations at [[https://dotfiles.natsukium.com/ja]]. These are exported from Org-mode to HTML, with translations managed using po4a.
+
+** Technology Stack
+
+- **[[https://nixos.org/][Nix]]**: A purely functional package manager that enables declarative, reproducible system configurations
+- **[[https://orgmode.org/][Org-mode]]**: A powerful document authoring system in Emacs that supports literate programming
+- **[[https://github.com/features/actions][GitHub Actions]]**: Automated deployment of documentation to GitHub Pages
+- **[[https://po4a.org/][po4a]]**: Translation framework for documentation
+
+** Managed Systems
+
+This repository manages configurations for 7 machines across different platforms:
+
+*** Linux (NixOS)
+- **kilimanjaro**: Primary desktop workstation
+- **katavi**: Primary laptop for daily use
+- **tarangire**: Nix package build server (x86_64-linux)
+- **serengeti**: Nix package build server (aarch64-linux)
+- **manyara**: Mini PC running various home services
+
+*** macOS
+- **mikumi**: Build server for aarch64-darwin packages
+- **work**: Work laptop with development environment
+
+
+
 ** Translation
 
 This project uses po4a to manage translations.
