refactor(emacs): reorganize nix-mode configuration
Move nix-mode setup to dedicated section with documentation to improve organization and maintainability of Emacs configuration

--- a/applications/emacs/init.org
+++ b/applications/emacs/init.org
@@ -181,6 +181,20 @@ markdown-mode is a major mode for editing Markdown-formatted text.
               ("C-c C-e" . markdown-do)))
 #+end_src
 
+** Nix
+
+https://github.com/NixOS/nix-mode
+
+#+begin_quote
+An Emacs major mode for editing Nix expressions.
+#+end_quote
+
+#+begin_src emacs-lisp
+(use-package nix-mode
+  :ensure t
+  :mode "\\.nix\\'")
+#+end_src
+
 * org
 
 ** Semantic Line Breaks
@@ -407,8 +421,4 @@ Used when converting Org files to HTML with syntax highlighting for code blocks.
  '((shell . t)))
 
 (setq org-src-preserve-indentation t)
-
-(use-package nix-mode
-  :ensure t
-  :mode "\\.nix\\'")
 #+end_src
