fix(emacs): update deprecated org capture template syntax
Replace file+datetree with file+olp+datetree for journal entries
to resolve deprecation warnings in newer org-mode versions.

--- a/applications/emacs/init.org
+++ b/applications/emacs/init.org
@@ -227,7 +227,7 @@ to prevent lines from becoming unnecessarily long.
          (file+headline ,(concat org-root "todo.org") "Tasks")
          "* TODO %?\n  %i\n  %a")
         ("j" "Journal" entry
-         (file+datetree ,(concat org-root "journal.org"))
+         (file+olp+datetree ,(concat org-root "journal.org"))
          "* %U\n%?\n  %i\n  %a")
         ("f" "Fleeting" entry
          (file ,(concat org-root "fleeting.org"))
