docs(overlays): migrate to literate configuration

--- a/configuration.org
+++ b/configuration.org
@@ -2,6 +2,9 @@
 
 * Configuration
 
+** Overlays
+#+INCLUDE: "./overlays/configuration.org"
+
 ** Emacs
 *** early-init.org
 #+INCLUDE: "./applications/emacs/early-init.org"
