docs: add auto-generated file notice

--- a/overlays/configuration.org
+++ b/overlays/configuration.org
@@ -22,6 +22,11 @@ Overlays are organized into four categories based on their purpose and expected 
 - *patches*: Workarounds not suitable for upstream contribution (e.g., locale-specific fixes,
   local tooling shims). Expected to remain indefinitely.
 
+#+begin_src nix :tangle default.nix :exports none
+# This file is auto-generated from configuration.org.
+# Do not edit directly.
+#+end_src
+
 #+begin_src nix :tangle default.nix
 { inputs }:
 {
