docs: document literate configuration philosophy
Add a Philosophy section to README explaining why the repository uses literate
programming with Org mode documents. This captures the rationale for preserving
intent and decision context alongside configurations, addressing the gap between
what the code does and why those choices were made.

--- a/README.org
+++ b/README.org
@@ -4,6 +4,28 @@
 
 * About
 
+* Philosophy
+** Literate Configuration
+
+Nix is declarative. Reading a Nix expression reveals what the system should become,
+and Nix itself handles how to get there. But neither the code nor the build system
+captures why a particular configuration exists, or why alternatives were rejected.
+
+Why was fish chosen over zsh or bash? Why does the desktop profile enable this
+specific set of services? Why was a particular package pinned to an older version?
+The code shows the decision, but not the reasoning behind it.
+Without this context, future changes risk undoing intentional tradeoffs or
+repeating previously rejected approaches.
+
+This repository uses literate programming to preserve intent. Configuration lives
+in Org mode documents where prose surrounds code. Each decision—from high-level
+architecture to individual package overrides—is accompanied by its rationale:
+why this approach was chosen, and why alternatives were not.
+
+Configurations are documented with the problem that motivated them, the alternatives
+considered, and the reasoning behind the final choice. For temporary workarounds,
+the conditions for removal are also noted.
+
 ** Translation
 
 This project uses po4a to manage translations.
