docs: automate CLAUDE.md generation from README.org
Export the Philosophy section from README.org as CLAUDE.md to preserve
configuration rationale in a format Claude Code can reference. This ensures
project-specific coding guidelines are automatically kept in sync with the
main documentation source.

--- a/README.org
+++ b/README.org
@@ -5,6 +5,11 @@
 * About
 
 * Philosophy
+:PROPERTIES:
+:EXPORT_FILE_NAME: CLAUDE
+:EXPORT_OPTIONS: toc:nil
+:END:
+
 ** Literate Configuration
 
 Nix is declarative. Reading a Nix expression reveals what the system should become,
@@ -25,6 +30,8 @@ why this approach was chosen, and why alternatives were not.
 Configurations are documented with the problem that motivated them, the alternatives
 considered, and the reasoning behind the final choice. For temporary workarounds,
 the conditions for removal are also noted.
+
+* Development
 
 ** Translation
 
