docs: reorganize README

--- a/README.org
+++ b/README.org
@@ -31,6 +31,10 @@ Configurations are documented with the problem that motivated them, the alternat
 considered, and the reasoning behind the final choice. For temporary workarounds,
 the conditions for removal are also noted.
 
+* Configuration
+
+#+INCLUDE: "./configuration.org"
+
 * Development
 
 ** Translation
@@ -95,5 +99,3 @@ in practice you only need to run this command.
 #+begin_src bash
 po4a po4a.cfg
 #+end_src
-
-#+INCLUDE: "./configuration.org" :minlevel 1
